# job-search-with-database-connection

./: .gitignore  README.md  database.ini  database.sample  main.py  pyproject.toml
data/: data.json
false/artifacts/f4/27/fe/8de5d246455c1b80784725fc8cd0bad067e0f0ab549ccb64a6584f38c5/: psycopg2_binary-2.9.10-cp313-cp313-macosx_14_0_arm64.whl
src/: config.py  db_manager.py  file_utils.py  headhunter_api.py  schema_manager.py
tests/: test_headhunter_api.py  test_json_worker.py
