[tool.poetry]
name = "job-search-with-database-connection"
version = "0.1.0"
description = ""
authors = ["Stanislav Mayatsky <stasm226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
